--- a/index.html/css/styles.css
+++ b/index.html/css/styles.css
@@ -56,7 +56,24 @@ Fonts
   left: 0;
   animation: loader 2s linear infinite;
   opacity: 0;
+}
 
+.loader:before{
+  animation-delay: .5s;
+}
+
+@keyframes loader {
+     0%{
+          transform: scale(0);
+           opacity: 0;
+       }
+       50%{
+         opacity: 1;
+       }
+       100%{
+         transform: scale(1);
+         opacity: 0;
+       }
 }
 /*
 =============== 
