--- a/index.html/css/styles.css
+++ b/index.html/css/styles.css
@@ -1,21 +1,10 @@
 /* Loader */
 
-.loader_bg {
-  position: fixed;
-  z-index: 999999;
-  background: #fff;
-  width: 100%;
-  height: 100%;
-}
-
+ 
 .loader {
-  border: 0 solid transparent;
-  border-radius: 50%;
-  width: 150px;
-  height: 150px;
   position: absolute;
-  top: calc(50vh - 75px);
-  left: calc(50vw - 75px);
+  top: 50%;
+  left: 50%;
 }
 
 .loader:before, .loader:after{
