--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -985,6 +985,9 @@ Skills
   width: 50%;
   border-radius: var(--radius);
 }
+.value-30 {
+  width: 30%;
+}
 .value-70 {
   width: 70%;
 }
@@ -998,9 +1001,15 @@ Skills
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
 }
+
+.skill-text-30 {
+  left: 30%;
+}
+
 .skill-text-70 {
   left: 70%;
 }
+
 .skill-text-80 {
   left: 80%;
 }
