--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1085,9 +1085,11 @@ Blog
   background: var(--clr-grey-10);
 }
 .card {
-  height: 27rem;
+  height: 20rem;
   position: relative;
   /* talk later */
+  margin-bottom: 20px;
+  margin-top: 27px;
   -webkit-perspective: 1500px;
   perspective: 1500px;
 }
@@ -1101,6 +1103,7 @@ Blog
   left: 0;
   width: 100%;
   height: 100%;
+  margin-bottom: 15px;
   border-radius: var(--radius);
   -webkit-transform: translate3d(0, 0, 0);
   visibility: visible;
@@ -1128,11 +1131,14 @@ Blog
   padding: 1rem 1.5rem;
 }
 .card-front img {
-  height: 13rem;
-  -o-object-fit: cover;
-  object-fit: cover;
+  display: inline-block;
+  height: 25rem;
+  -o-object-fit: fill;
+  object-fit: fill;
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
+  border-bottom-left-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
 }
 .card-footer {
   display: grid;
@@ -1156,8 +1162,23 @@ Blog
 }
 .blog-center {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+  grid-template-columns: repeat(4, 1fr);
   gap: 3rem 1rem;
+}
+
+@media screen and (max-width: 708px){
+  .blog-center {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 3rem 1rem;
+  }
+}
+@media screen and (max-width: 390px){
+  .blog-center {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 3rem 1rem;
+  }
 }
 /*
 =============== 
